# ProiectSecondChance

./: DB_POO.sql  SQL_CreateTables.sql
SecondChance/: CMakeLists.txt  generalaccount.cpp  generalaccount.h  main.cpp  myexception.h  mythread.cpp  mythread.h  produs.cpp  produs.h  secondchance.cpp  secondchance.h  secondchance.ui  servermanager.cpp  servermanager.h  utilizator.cpp  utilizator.h
SecondChance - Copy/: main.cpp  mythread.cpp  secondchance.cpp  secondchance.h  secondchance.ui  servermanager.h  utilizator.cpp  utilizator.h
SecondChance/SecondChance/: CMakeLists.txt  main.cpp  secondchance.cpp  secondchance.h  secondchance.ui  servermanager.cpp  servermanager.h
